install spatie-web-tinker

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,10 @@
         }
     },
     "require": {
-        "livewire/livewire": "^3.0"
+        "livewire/livewire": "^3.0",
+        "spatie/laravel-web-tinker": "^1.0"
     },
+    "require-dev": {},
     "extra": {
         "laravel": {
             "providers": [
